--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -4,4 +4,5 @@
     font-size: 30px;
     font-weight: 300;
     line-height: 1.3;
+    padding: 30px 50px 0 50px;
 }
